--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -40,7 +40,7 @@
                     <ul>
                         <li class="match"><a href="index.html">Upcoming Match</a></li>
                         <li class="group"><a  href="">All Group</a></li>
-                        <li class="blog"><a  href="">Blog</a></li>
+                        <li class="blog"><a  href="blog.html">Blog</a></li>
                     </ul>
                 </nav>
             </div>
