--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
     
             </div>
         </section>
+        <section class="view">
+            <a href="">View All</a>
+        </section>
 
     </main>
     <!-- main end -->
