--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <nav class="main-nav">
                     <ul>
                         <li class="index"><a href="upcoming-match.html">Upcoming Match</a></li>
-                        <li class="group"><a  href="">All Group</a></li>
+                        <li class="group"><a  href="index.html">All Group</a></li>
                         <li class="blog"><a  href="blog.html">Blog</a></li>
                     </ul>
                 </nav>
