--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,10 @@
     
             </div>
         </section>
+        </section>
+        <section class="view">
+            <a href="">View All</a>
+        </section>
 
     </main>
     <!-- main end -->
