--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -133,6 +133,9 @@
     
             </div>
         </section>
+        <section class="view">
+            <a href="">View All</a>
+        </section>
 
     </main>
     <!-- main end -->
@@ -169,6 +172,7 @@
         
         </div>
     </section>
+
 </footer>
 
 </html>
